--- a/user-guide/99-common-questions.mdx
+++ b/user-guide/99-common-questions.mdx
@@ -73,7 +73,12 @@ Mixing and stirring in the Pioreactor
 
 #### How is mixing / stirring performed in the Pioreactor?
 
-Stirring is performed with a 15mm stir bar inside the vial, controlled by a pair of magnets spinning below the vial. The rotation speed, RPM, of the vial can be controlled using the Pioreactor software. This stirring is also how aeration is done.
+Stirring is performed with a 15mm stir bar inside the vial, controlled by a pair of magnets spinning below the vial. The rotation speed, RPM, of the stir bar can be controlled using the Pioreactor software. This stirring is also how aeration is done.
+
+
+#### The magnets rubs against the plastic screws above them, causing the stirring performance to be degraded / stop. How do I fix this?
+
+Dis-attach the top faceplate. Under the faceplate, slightly unscrew each of the four metal screws. This will add more space between the magnets and the plastic screws.
 
 #### How can I improve mixing and aeration?
 
