--- a/user-guide/01-getting-started/01c-software-set-up.mdx
+++ b/user-guide/01-getting-started/01c-software-set-up.mdx
@@ -7,7 +7,7 @@ slug: /software-set-up
 import TOCInline from '@theme/TOCInline';
 
 
-### Let's install your Pioreactor's software
+### Before you begin
 
 You can expect the setup process to take 10-15 minutes.
 
@@ -74,7 +74,7 @@ Your settings should look like this:
 
 ## Adding workers to your cluster
 
-### 1. Install the worker software
+#### 1. Install the worker software
 
 Follow the same instructions above, but use a [Pioreactor Worker image](https://github.com/pioreactor/custopizer/releases/latest/download/pioreactor_worker.zip) instead.
 
@@ -84,7 +84,7 @@ Choose a hostname that isn't currently being used in your cluster, ex: `worker1`
 
 After you have installed the image, connecting the new Pioreactor to your cluster is simple. 
 
-### 2. Add to cluster using the UI
+#### 2. Add to cluster using the UI
 
 On the _Pioreactors_ page in the web interface, click the "Add new Pioreactor" button in the top right:
 
