--- a/user-guide/01-getting-started/01c-software-set-up.mdx
+++ b/user-guide/01-getting-started/01c-software-set-up.mdx
@@ -34,7 +34,7 @@ We'll start with an unused Raspberry Pi and empty microSD card (or we'll reforma
 What is an image file? It's a file that contains all the required software preinstalled on it, including an operating system and our custom Pioreactor software. The image will be placed on the microSD card.
 :::
 
-2. Download the [Raspberry Pi Imager](https://www.raspberrypi.org/software/) for your operating system, install it, and
+2. Download the [Raspberry Pi Imager](https://www.raspberrypi.org/software/) for your operating system and install it.
 3.  Open the newly-installed Raspberry Pi Imager.
 3.  Click **Choose OS**. Click on **Use custom** towards the bottom:
     ![Click "Choose OS"](/img/user-guide/choose-os.png)
@@ -42,7 +42,7 @@ What is an image file? It's a file that contains all the required software prein
     Select the downloaded Pioreactor image from step 1.
 	
     ![In the local computer's directory, select the downloaded image](/img/user-guide/select_new_image.png)
-4. Connect your microSD card to your computer. Once your microSD card connected to your computer, click **Choose Storage** and select it.
+4. Insert your microSD card to your computer. After your microSD card is recognized by your computer, click **Choose Storage** and select it.
     ![Click "Choose storage"](/img/user-guide/choose-storage.png)
 5. Click the settings menu (Gear button in the bottom right).
 	![Settings menu](/img/user-guide/rpi-click-settings.png)
