--- a/user-guide/01-getting-started/01c-software-set-up.mdx
+++ b/user-guide/01-getting-started/01c-software-set-up.mdx
@@ -70,11 +70,11 @@ Your settings should look like this:
 8.  Plug in the power cord into your Raspberry Pi. LEDs onboard the Raspberry Pi should start to light up. After no more than **three minutes**, your Pioreactor HAT will briefly blink a blue LED, signifying it is ready.
     - Waited, but didn't see a blue LED blink? Try pressing on the onboard button, near the side labelled "PWM". If this lights up a blue LED, you're good to move on. Still not working? Try this install process again, or email us at hello@pioreactor.com.
 9. After observing the blue LED flashing, navigate to [http://pioreactor.local](http://pioreactor.local) in a web browser to visit the web interface. (Not working? See [Troubleshooting](#troubleshooting) below).
-10. The Pioreactor is now ready for use! Follow [this guide](/user-guide/prepare-vial-for-cultures) to setting up your first experiment.
+10. The Pioreactor is now ready for use! Follow [this guide](/user-guide/prepare-vial-for-cultures) to set up your first experiment.
 
 ## Adding workers to your cluster
 
-#### 1. Install the worker software
+#### Step 1. Install the worker software
 
 Follow the same instructions above, but use a [Pioreactor Worker image](https://github.com/pioreactor/custopizer/releases/latest/download/pioreactor_worker.zip) instead.
 
@@ -82,9 +82,9 @@ Follow the same instructions above, but use a [Pioreactor Worker image](https://
 Choose a hostname that isn't currently being used in your cluster, ex: `worker1`, `worker2`, etc.
 :::
 
-After you have installed the image, connecting the new Pioreactor to your cluster is simple. 
+After you have installed the image, connecting the new Pioreactor to your cluster is simple:
 
-#### 2. Add to cluster using the UI
+#### Step 2. Add to cluster using the UI
 
 On the _Pioreactors_ page in the web interface, click the "Add new Pioreactor" button in the top right:
 
