--- a/user-guide/01-getting-started/01c-software-set-up.mdx
+++ b/user-guide/01-getting-started/01c-software-set-up.mdx
@@ -76,13 +76,13 @@ Your settings should look like this:
 
 #### Step 1. Install the worker software
 
-Follow the same instructions above, but use a [Pioreactor Worker image](https://github.com/pioreactor/custopizer/releases/latest/download/pioreactor_worker.zip) instead.
+1. Follow the same instructions above, but use a [Pioreactor Worker image](https://github.com/pioreactor/custopizer/releases/latest/download/pioreactor_worker.zip) instead.
 
 :::note 
 Choose a hostname that isn't currently being used in your cluster, ex: `worker1`, `worker2`, etc.
 :::
 
-After you have installed the image, connecting the new Pioreactor to your cluster is simple:
+2. After you have installed the worker image, and powered up the Raspberry Pi, connecting the new Pioreactor to your cluster is simple:
 
 #### Step 2. Add to cluster using the UI
 
