--- a/user-guide/01-getting-started/01c-software-set-up.mdx
+++ b/user-guide/01-getting-started/01c-software-set-up.mdx
@@ -64,7 +64,7 @@ Your settings should look like this:
 
 6.  Click **Save**.
 8.  Click **Write**. Writing will take up to 5 minutes. Perfect time for a tea break.
-7.  Once writing is complete complete, remove the microSD card, and place it (exposed copper side up) into the Raspberry Pi. The microSD slot is located on the PWM side of the Pioreactor, in the gap between the Raspberry Pi and the bottom faceplate. Reference the picture for the orientation. 
+7.  Once writing is complete, remove the microSD card, and place it (exposed copper side up) into the Raspberry Pi. The microSD slot is located on the PWM side of the Pioreactor, in the gap between the Raspberry Pi and the bottom faceplate. Reference the picture for the orientation.
 
 	![Insert the microSD card](/img/user-guide/place-micro-sd-card.png)
 8.  Plug in the power cord into your Raspberry Pi. LEDs onboard the Raspberry Pi should start to light up. After no more than **three minutes**, your Pioreactor HAT will briefly blink a blue LED, signifying it is ready.
