more info on worker setup

--- a/user-guide/01-getting-started/01c-software-set-up.mdx
+++ b/user-guide/01-getting-started/01c-software-set-up.mdx
@@ -82,9 +82,11 @@ Your settings should look like this:
 Choose a hostname that isn't currently being used in your cluster, ex: `worker1`, `worker2`, etc.
 :::
 
-2. After you have installed the worker image, and powered up the Raspberry Pi, connecting the new Pioreactor to your cluster is simple:
+2. After the image is written to the microSD card, place the microSD card into the Raspberry Pi and power it on. The Pioreactor's blue LED won't blink, as it's not 100% ready yet.
 
-#### Step 2. Add to cluster using the UI
+2. After a few minutes, connect the new Pioreactor worker to your cluster using the UI:
+
+#### Step 2. Add worker to cluster using the UI
 
 On the _Pioreactors_ page in the web interface, click the "Add new Pioreactor" button in the top right:
 
