--- a/user-guide/99-common-questions.mdx
+++ b/user-guide/99-common-questions.mdx
@@ -170,6 +170,28 @@ Unfortunately, the microSD card becoming corrupted or damaged is an infrequent b
 
 - If the microSD was inside the leader Raspberry Pi, this is a bigger problem. Likely any running experiment will have to be restarted. Fortunately, if you have more than one Pioreactor in your cluster, then the leader's SQLite database has been periodically backing itself up to other Pioreactors in the cluster every few days. Using the command line, check other Pioreactors' `/home/pioreactor/.pioreactor/storage` directory for the _latest_ backup named `pioreactor.sqlite.backup` (should be from within the past few days hours). You can use this database to restart a new leader.
 
+Pioreactor UI
+---------------------------------
+
+#### I'm not able to access `http://pioreactor.local`
+
+
+*   In your browser's address bar, add the `http://` infront of the url, like so: `http://pioreactor.local`.
+*   The UI is hosted on **http**, not **http_s_**. Check if you are accessing `http` `://pioreactor.local`, and _not_ `https` `://pioreactor.local`.
+*   Try accessing using the url `http://<the permanent name of your Pioreactor aka hostname>.local`
+*   If you know your Raspberry Pi's IP, try `http://<IP address of your Raspberry Pi>`
+*   When pressing the button on the HAT, does the blue LED show up? If not, installation may have failed. Try installing the image again, and double check the settings.
+*   In your Raspberry Pi Imager settings, confirm that you clicked "Set username and password", and used the username `pioreactor`. If not, try [reinstalling the image](/user-guide/software-set-up#setting-up-your-raspberry-pi).
+*   Are you on an older Windows machine? You may need to install a DNS [service](https://learn.adafruit.com/bonjour-zeroconf-networking-for-windows-and-linux/overview#microsoft-windows-914263-8), but also see workarounds [here](https://github.com/OutsourcedGuru/octoprint-name-resolution-hacks).
+
+Also, see question below.
+
+
+#### When I click an action in the UI, I don't see any response
+
+ - If you _also_ had trouble accessing the UI (see question above), in your configuration, change the `leader_address` field to whatever worked above, an IP for example.
+ - Another possibility is that the experiment has changed - try refreshing the page.
+
 
 Networking
 ---------------------------------
