--- a/user-guide/01-getting-started/01c-software-set-up.mdx
+++ b/user-guide/01-getting-started/01c-software-set-up.mdx
@@ -17,7 +17,7 @@ You can expect the setup process to take 10-15 minutes.
 Before you get started, you'll need to have the following:
 
 1.  A Raspberry Pi (our list of preferred Raspberry Pis is [here](/user-guide/common-questions#what-raspberry-pi-hardware-can-i-use-i-see-raspberry-pi-1-2-3-4-a-b--zero---its-confusing))
-2.  A blank microSD card, ideally 16GB size or larger.
+2.  A blank microSD card, at least 16GB. We like SanDisk and Samsung SD cards for their longevity.
 3.  A suitable power cord for the Raspberry Pi. (If you look at the power rating, it should be about 5V and at least 2.25A).
 4.  A computer with internet access and ability to read & write to a microSD card.
 
