adding blinking gif in software setup

--- a/user-guide/01-getting-started/01c-software-set-up.mdx
+++ b/user-guide/01-getting-started/01c-software-set-up.mdx
@@ -64,11 +64,22 @@ Your settings should look like this:
 
 6.  Click **Save**.
 8.  Click **Write**. Writing will take up to 5 minutes. Perfect time for a tea break.
-7.  Once writing is complete, remove the microSD card, and place it (exposed copper side up) into the Raspberry Pi. **Your Raspberry Pi's power should be unplugged before inserting**. The microSD slot is located on the PWM side of the Pioreactor, in the gap between the Raspberry Pi and the bottom faceplate. Reference the picture for the orientation.
+7.  Once writing is complete, remove the microSD card, and place it (exposed copper side up) into the Raspberry Pi. **Your Raspberry Pi's power should be unplugged before inserting the microSD card**. The microSD slot is located on the PWM side of the Pioreactor, in the gap between the Raspberry Pi and the bottom faceplate. Reference the picture for the orientation.
 
 	![Insert the microSD card](/img/user-guide/place-micro-sd-card.png)
+
 8.  Plug in the power cord into your Raspberry Pi. LEDs onboard the Raspberry Pi should start to light up. After about **three minutes**, your Pioreactor HAT will briefly blink a blue LED, signifying it is ready.
-    - Waited, but didn't see a blue LED blink? Try pressing on the onboard button, near the side labelled "PWM". If this lights up a blue LED, you're good to move on. Still not working? Try this install process again, or email us at hello@pioreactor.com.
+
+<p align="center">
+
+![](/img/user-guide/pio_blink.gif)
+
+</p>
+
+:::info
+Waited, but didn't see a blue LED blink? Try pressing on the onboard button, near the side labelled "PWM". If this lights up a blue LED, you're good to move on. Still not working? Try this install process again, or email us at hello@pioreactor.com.
+:::
+
 9. After observing the blue LED flashing, navigate to [http://pioreactor.local](http://pioreactor.local) in a web browser to visit the web interface. (Not working? See [Troubleshooting](#troubleshooting) below).
 10. The Pioreactor is now ready for use! Follow [this guide](/user-guide/prepare-vial-for-cultures) to set up your first experiment.
 
