note about rasap

--- a/user-guide/01-getting-started/01c-software-set-up.mdx
+++ b/user-guide/01-getting-started/01c-software-set-up.mdx
@@ -77,7 +77,7 @@ Your settings should look like this:
 </p>
 
 :::info
-Waited, but didn't see a blue LED blink? Try pressing on the onboard button, near the side labelled "PWM". If this lights up a blue LED, you're good to move on. Still not working? Try this install process again, or email us at hello@pioreactor.com.
+Waited, but didn't see a blue LED blink? Try pressing on the onboard button, near the side labelled "PWM". If this lights up a blue LED, you're good to move on. Still not working? Try power-cycling the Raspberry Pi, or email us at hello@pioreactor.com.
 :::
 
 9. After observing the blue LED flashing, navigate to [http://pioreactor.local](http://pioreactor.local) in a web browser to visit the web interface. (Not working? See [Troubleshooting](#troubleshooting) below).
