--- a/user-guide/01-getting-started/01c-software-set-up.mdx
+++ b/user-guide/01-getting-started/01c-software-set-up.mdx
@@ -41,7 +41,9 @@ What is an image file? It's a file that contains all the required software prein
     ![Select the "Use custom" option](/img/user-guide/use_custom_image.png)
     Select the downloaded Pioreactor image from step 1.
 	
-    ![In the local computer's directory, select the downloaded image](/img/user-guide/select_new_image.png)
+    <img src="/img/user-guide/select_new_image.png" alt="Screenshot of the local computer's directory, selecting the downloaded image" width="555" style={{margin: "auto", display:"block"}} />
+
+
 4. Insert your microSD card to your computer. After your microSD card is recognized by your computer, click **Choose Storage** and select it.
     ![Click "Choose storage"](/img/user-guide/choose-storage.png)
 5. Click the settings menu (Gear button in the bottom right).
@@ -60,7 +62,7 @@ What is an image file? It's a file that contains all the required software prein
 
 Your settings should look like this: 
 
-  ![Settings menu](/img/user-guide/rpi-imager-settings.png)
+<img src="/img/user-guide/rpi-imager-settings.png" width="625" alt="Screenshot of what your settings should look like" style={{margin: "auto", display:"block"}} />
 
 6.  Click **Save**.
 8.  Click **Write**. Writing will take up to 5 minutes. Perfect time for a tea break.
@@ -72,7 +74,7 @@ Your settings should look like this:
 
 <p align="center">
 
-![](/img/user-guide/pio_blink.gif)
+![Small video of blinking LED light on the HAT](/img/user-guide/pio_blink.gif)
 
 </p>
 
