--- a/user-guide/01-getting-started/01c-software-set-up.mdx
+++ b/user-guide/01-getting-started/01c-software-set-up.mdx
@@ -31,7 +31,7 @@ We'll start your empty microSD card (or we'll reformat the card later if not emp
 1. Download the [Pioreactor leader & worker image file](https://github.com/pioreactor/custopizer/releases/latest/download/pioreactor_leader_worker.zip).
 
 :::info
-What is an image file? It's a file that contains all the required software preinstalled on it, including an operating system and our custom Pioreactor software. The image will be placed on the microSD card.
+What is an image file? It's a file that contains all the required software preinstalled on it, including an operating system and our custom Pioreactor software. The image will be installed on the microSD card.
 :::
 
 2. Download the [Raspberry Pi Imager](https://www.raspberrypi.org/software/) for your operating system and install it.
@@ -64,13 +64,13 @@ Your settings should look like this:
 
 <img src="/img/user-guide/rpi-imager-settings.png" width="625" alt="Screenshot of what your settings should look like" style={{margin: "auto", display:"block"}} />
 
-6.  Click **Save**.
+6.  Click **Save** to save and exit the dialog box.
 8.  Click **Write**. Writing will take up to 5 minutes. Perfect time for a tea break.
 7.  Once writing is complete, remove the microSD card, and place it (exposed copper side up) into the Raspberry Pi. **Your Raspberry Pi's power should be unplugged before inserting the microSD card**. The microSD slot is located on the PWM side of the Pioreactor, in the gap between the Raspberry Pi and the bottom faceplate. Reference the picture for the orientation.
 
 	![Insert the microSD card](/img/user-guide/place-micro-sd-card.png)
 
-8.  Plug in the power cord into your Raspberry Pi. LEDs onboard the Raspberry Pi should start to light up. After about **three minutes**, your Pioreactor HAT will briefly blink a blue LED, signifying it is ready.
+8.  Plug in the power cord into your Raspberry Pi. LEDs onboard the Raspberry Pi may start to light up. After about **three minutes**, your Pioreactor HAT will briefly blink a blue LED, telling us it is ready.
 
 <p align="center">
 
@@ -79,10 +79,10 @@ Your settings should look like this:
 </p>
 
 :::info
-Waited, but didn't see a blue LED blink? Try pressing on the onboard button, near the side labelled "PWM". If this lights up a blue LED, you're good to move on. Still not working? Try power-cycling the Raspberry Pi, or email us at hello@pioreactor.com.
+Waited, but didn't see a blue LED blink? Try pressing on the onboard button, near the side labelled "PWM", and pictured above. If this lights up a blue LED, you're good to move on. Still not working? Try power-cycling the Raspberry Pi, or email us at hello@pioreactor.com.
 :::
 
-9. After observing the blue LED flashing, navigate to [http://pioreactor.local](http://pioreactor.local) in a web browser to visit the web interface. (Not working? See [Troubleshooting](#troubleshooting) below).
+9. After observing the blue LED flashing, navigate to [http://pioreactor.local](http://pioreactor.local) in a web browser to visit the web interface. (Not working? Read [Troubleshooting](#pioreactorlocal-in-a-web-browser-is-not-showing-up) below).
 10. The Pioreactor is now ready for use! Follow [this guide](/user-guide/prepare-vial-for-cultures) to set up your first experiment.
 
 ## Adding additional workers to your cluster
