new photos and video

--- a/user-guide/01-getting-started/01c-software-set-up.mdx
+++ b/user-guide/01-getting-started/01c-software-set-up.mdx
@@ -68,14 +68,14 @@ Your settings should look like this:
 8.  Click **Write**. Writing will take up to 5 minutes. Perfect time for a tea break.
 7.  Once writing is complete, remove the microSD card, and place it (exposed copper side up) into the Raspberry Pi. **Your Raspberry Pi's power should be unplugged before inserting the microSD card**. The microSD slot is located on the PWM side of the Pioreactor, in the gap between the Raspberry Pi and the bottom faceplate. Reference the picture for the orientation.
 
-	![Insert the microSD card](/img/user-guide/place-micro-sd-card.png)
+	![Insert the microSD card](/img/user-guide/place-micro-sd-card.JPG)
 
 8.  Plug in the power cord into your Raspberry Pi. LEDs onboard the Raspberry Pi may start to light up. After about **three minutes**, your Pioreactor HAT will briefly blink a blue LED, telling us it is ready.
 
 <p align="center">
-
-![Small video of blinking LED light on the HAT](/img/user-guide/pio_blink.gif)
-
+    <video width="520" muted loop="true" autoplay="autoplay">
+      <source src="/vid/flashing.mp4" type="video/mp4" />
+    </video>
 </p>
 
 :::info
