--- a/user-guide/01-getting-started/01c-software-set-up.mdx
+++ b/user-guide/01-getting-started/01c-software-set-up.mdx
@@ -70,7 +70,7 @@ Your settings should look like this:
 
 	![Insert the microSD card](/img/user-guide/place-micro-sd-card.JPG)
 
-8.  Plug in the power cord into your Raspberry Pi. LEDs onboard the Raspberry Pi may start to light up. After about **three minutes**, your Pioreactor HAT will briefly blink a blue LED, telling us it is ready.
+8.  Plug power into your Raspberry Pi. LEDs onboard the Raspberry Pi may start to light up. After about **three minutes**, your Pioreactor HAT will briefly blink a blue LED, telling us it is ready.
 
 <p align="center">
     <video width="520" muted loop="true" autoplay="autoplay">
