--- a/user-guide/01-getting-started/01c-software-set-up.mdx
+++ b/user-guide/01-getting-started/01c-software-set-up.mdx
@@ -70,7 +70,7 @@ Your settings should look like this:
 
 	![Insert the microSD card](/img/user-guide/place-micro-sd-card.JPG)
 
-8.  Plug power into your Raspberry Pi. LEDs onboard the Raspberry Pi may start to light up. After about **three minutes**, your Pioreactor HAT will briefly blink a blue LED, telling us it is ready.
+8.  Plug power into your Raspberry Pi. LEDs onboard the Raspberry Pi may start to light up. After about **three minutes**, your Pioreactor HAT will briefly blink a blue LED for 2 seconds, telling us it is ready.
 
 <p align="center">
     <video width="520" muted loop="true" autoplay="autoplay">
@@ -79,7 +79,7 @@ Your settings should look like this:
 </p>
 
 :::info
-Waited, but didn't see a blue LED blink? Try pressing on the onboard button, near the side labelled "PWM", and pictured above. If this lights up a blue LED, you're good to move on. Still not working? Try power-cycling the Raspberry Pi, or email us at hello@pioreactor.com.
+Waited, but didn't see a blue LED blink, or maybe you missed it? Try pressing on the onboard button, near the side labelled "PWM", and pictured above. If this lights up the blue LED, you're good to move on. Still not working? Try power-cycling the Raspberry Pi, or email us at hello@pioreactor.com.
 :::
 
 9. After observing the blue LED flashing, navigate to [http://pioreactor.local](http://pioreactor.local) in a web browser to visit the web interface. (Not working? Read [Troubleshooting](#pioreactorlocal-in-a-web-browser-is-not-showing-up) below).
@@ -120,7 +120,7 @@ After a minute, the new Pioreactor should appear on the _Pioreactors_ and _Exper
 On the leader's command line, the command `pio add-pioreactor <new name>` will connect the new Pioreactor to the cluster.
 
 :::tip
-We highly recommend running a [self-test](/user-guide/running-self-test) on all Pioreactors after your initial setup to detect any hardware bugs at this point. 
+We recommend running a [self-test](/user-guide/running-self-test) on all Pioreactors after your initial setup to detect any hardware bugs at this point.
 :::
 
 ## Troubleshooting
