--- a/user-guide/99-common-questions.mdx
+++ b/user-guide/99-common-questions.mdx
@@ -75,21 +75,26 @@ Mixing and stirring in the Pioreactor
 
 Stirring is performed with a 15mm stir bar inside the vial, controlled by a pair of magnets spinning below the vial. The rotation speed, RPM, of the stir bar can be controlled using the Pioreactor software. This stirring is also how aeration is done.
 
+#### Can I use my own stir bar?
+
+Of course! The maximum length of a stir bar is 20mm. Keep the height low as to not interfere with the optics. (The provided stir bar is 3mm high). Try using other stir bar shapes / designs!
 
 #### The magnets rubs against the plastic screws above them, causing the stirring performance to be degraded / stop. How do I fix this?
 
 Dis-attach the top faceplate. Under the faceplate, slightly unscrew each of the four metal screws. This will add more space between the magnets and the plastic screws.
+
+#### How can I increase the strength of the magnetic force applied to the stirbar?
+
+Try to reduce the distance between the stirring magnets and the stir bar by carefully raising the stirring fan a small amount. Going even further, you can remove the 4mm screws in the bottom of the vial holder (but find another way to secure the PCB), thereby be able to bring the magnets even closer.
 
 #### How can I improve mixing and aeration?
 
 If the standard mixing and aeration with the stir bar is not enough for your application, you can do a few things, (in increasing order of complication, not necessarily effectiveness):
 
 1. If the tubes in the cap are submerged during operation, this is reduce the transfer of air. Pull them up from the top of the cap to keep them out of the liquid.
-2. Leave the cap slightly ajar.
 3. Increase the RPM of the stirring. This will increase the surface area exposed to the air. Be warned though: too high of an RPM will cause either a large enough vortex to interfere with the optical systems, or will causing the stir bar to fall out of sync.
 4. Add a baffle to the vial cap. A simple cylinder that rests into the liquid causes disturbance in the rotating liquid that both mixing and aeration are significantly improved. A tube can be removed from the cap, and a autoclavable rod can be inserted such that it enters the media, but won't interfere with the optics.
 5. Adding external aeration to your Pioreactor. In the simplest case, using an air pump.
-
 
 
 
@@ -117,7 +122,7 @@ Although you can use any above, **we like the Raspberry Pi 3 Model A+, and Raspb
 
 #### Do I need any cooling for the Raspberry Pi?
 
-Nope, you shouldn't, unless you are connecting an external monitor.
+Nope, you shouldn't, unless you are connecting an external monitor. However, extra heat sinks are never a bad idea!
 
 #### Could a Raspberry Pi-compatible board work, like Rock Pi 4?
 
