new pics of export page

--- a/user-guide/01-getting-started/01c-software-set-up.mdx
+++ b/user-guide/01-getting-started/01c-software-set-up.mdx
@@ -112,8 +112,8 @@ Provide the chosen hostname of the new worker Pioreactor:
 ![Add new pioreactor modal](/img/user-guide/add_new_pioreactor_modal.png)
 
 
+After a minute, the new Pioreactor should appear on the _Pioreactors_ and _Experiment Overview_ page. Refresh the page if it does not show up. Your new Pioreactor will also blink it's blue LED.
 
-After a minute, the new Pioreactor should appear on the _Pioreactors_ and _Experiment Overview_ page. Refresh the page if it does not show up.
 
 #### From the command line _(Alternative)_
 
