--- a/user-guide/01-getting-started/01c-software-set-up.mdx
+++ b/user-guide/01-getting-started/01c-software-set-up.mdx
@@ -17,8 +17,8 @@ You can expect the setup process to take 10-15 minutes.
 Before you get started, you'll need to have the following:
 
 1.  A Raspberry Pi (our list of preferred Raspberry Pis is [here](/user-guide/common-questions#what-raspberry-pi-hardware-can-i-use-i-see-raspberry-pi-1-2-3-4-a-b--zero---its-confusing))
-2.  A blank microSD card, at least 16GB. We like SanDisk and Samsung SD cards for their longevity.
-3.  A suitable power cord for the Raspberry Pi. (If you look at the power rating, it should be about 5V and at least 2.25A).
+2.  A blank microSD card, at least 16GB. We like SanDisk and Samsung SD cards for their longevity, but any SD card will do, too.
+3.  A suitable power cord for the Raspberry Pi. (If you look at the power rating, it should be about 5 V and at least 2.25 A, or above 12 W).
 4.  A computer with internet access and ability to read & write to a microSD card.
 
 :::
@@ -26,7 +26,7 @@ Before you get started, you'll need to have the following:
 ### Setting up your Raspberry Pi
 
 
-We'll start your empty microSD card (or we'll reformat the card later if not empty).
+We'll start your blank microSD card.
 
 1. Download the [Pioreactor leader & worker image file](https://github.com/pioreactor/custopizer/releases/latest/download/pioreactor_leader_worker.zip).
 
@@ -34,7 +34,7 @@ We'll start your empty microSD card (or we'll reformat the card later if not emp
 What is an image file? It's a file that contains all the required software preinstalled on it, including an operating system and our custom Pioreactor software. The image will be installed on the microSD card.
 :::
 
-2. Download the [Raspberry Pi Imager](https://www.raspberrypi.org/software/) for your operating system and install it.
+2.  Download the [Raspberry Pi Imager](https://www.raspberrypi.org/software/) for your operating system and install it.
 3.  Open the newly-installed Raspberry Pi Imager.
 3.  Click **Choose OS**. Click on **Use custom** towards the bottom:
     ![Click "Choose OS"](/img/user-guide/choose-os.png)
@@ -60,9 +60,9 @@ What is an image file? It's a file that contains all the required software prein
 	
     5. Change timezone to your local timezone.
 
-Your settings should look like this: 
+    Your settings should look like this:
 
-<img src="/img/user-guide/rpi-imager-settings.png" width="625" alt="Screenshot of what your settings should look like" style={{margin: "auto", display:"block"}} />
+    <img src="/img/user-guide/rpi-imager-settings.png" width="625" alt="Screenshot of what your settings should look like" style={{margin: "auto", display:"block"}} />
 
 6.  Click **Save** to save and exit the dialog box.
 8.  Click **Write**. Writing will take up to 5 minutes. Perfect time for a tea break.
