--- a/user-guide/01-getting-started/01c-software-set-up.mdx
+++ b/user-guide/01-getting-started/01c-software-set-up.mdx
@@ -53,14 +53,14 @@ What is an image file? It's a file that contains all the required software prein
     3. Check **Set username and password**. Enter the following:
         -   **username**: `pioreactor`
         -   **password**: `raspberry` (you can change the password later).
-    4. Check **Configure wireless LAN** and enter your network name into SSID network name, WiFi password, and country.
+    4. Check **Configure wireless LAN** and enter your network name into SSID network name, WiFi password, and country. Or leave blank if using ethernet.
 	:::note
 	Alternative: instead of trying to connect to a difficult-to-access network, like at a university that may not easily allow Raspberry Pi's, [there's a built-in solution for creating a local access point](/user-guide/local-access-point)).
 	:::
 	
     5. Change timezone to your local timezone.
 
-    Your settings should look like this:
+    Your settings should look something like this:
 
     <img src="/img/user-guide/rpi-imager-settings.png" width="625" alt="Screenshot of what your settings should look like" style={{margin: "auto", display:"block"}} />
 
@@ -129,11 +129,12 @@ We recommend running a [self-test](/user-guide/running-self-test) on all Pioreac
 On a successful start, the Pioreactor will flash its blue LED for about 4 seconds. If you observe the blue LED flashing for longer, something may be wrong. You can diagnose the problem by [counting the number of flashes observed](/user-guide/error-codes).
 
 
-
 #### My RPi won't connect to my WiFi.
 
-*   If you are on a restrictive WiFi network (like at a university), and wish to avoid the network, [creating a local access point](/user-guide/local-access-point) may be a better option.
 *   Some Raspberry Pis can't connect to Wifi natively, and some Raspberry Pis can only connect to 2.4GHz connections. See table below: [![Rpi and wifi](https://user-images.githubusercontent.com/884032/105118696-e945dd00-5a9c-11eb-91f5-0cc77cdc1422.png)](https://user-images.githubusercontent.com/884032/105118696-e945dd00-5a9c-11eb-91f5-0cc77cdc1422.png)[](https://user-images.githubusercontent.com/884032/105118696-e945dd00-5a9c-11eb-91f5-0cc77cdc1422.png)
+*   If your network hidden? You will need to check `hidden SSID` in the configuration in the Raspberry Pi imager. To fix this, you'll need to restart the image installation from the Raspberry Pi Imager.
+*   Try power-cycling the Raspberry Pi (unplug and plug back in).
+*   If you are on a restrictive WiFi network (like at a university), and wish to avoid the network, [creating a local access point](/user-guide/local-access-point) may be a better option.
 *   You may have mis-typed your WiFi credentials. To fix this, you'll need to restart the image installation from the Raspberry Pi Imager.
 *   If connecting to a 5GHz WiFi connection, you _need_ to supply a valid country code. See the list here: [https://en.wikipedia.org/wiki/ISO\_3166-1\_alpha-2/](https://en.wikipedia.org/wiki/ISO_3166-1_alpha-2 "Link to country codes on wikipedia")
 *   Check out some other possibilities [here](https://community.octoprint.org/t/wifi-setup-and-troubleshooting/184#heading--troubleshooting).
@@ -145,11 +146,13 @@ Easiest solution is to start over: reflashing the OS onto the microSD card will 
 
 #### pioreactor.local in a web browser is not showing up
 
-*   In your browser's address bar, add the `http://` infront of the url, like so: `http://pioreactor.local`.
+*   In your browser's address bar, add the `http://` in front of the url, like so: `http://pioreactor.local`.
+*   Try appending a backslash as well: `http://pioreactor.local/`
 *   The UI is hosted on **http**, not **http_s_**. Check if you are accessing `http` `://pioreactor.local`, and _not_ `https` `://pioreactor.local`.
 *   Try accessing using the url `http://<the permanent name of your Pioreactor aka hostname>.local`
 *   If you know your Raspberry Pi's IP, try `http://<IP address of your Raspberry Pi>`
 *   When pressing the button on the HAT, does the blue LED show up? If not, installation may have failed. Try installing the image again, and double check the settings.
+*   Try power-cycling the Raspberry Pi (unplug and plug back in).
 *   In your Raspberry Pi Imager settings, confirm that you clicked "Set username and password", and used the username `pioreactor`. If not, try [reinstalling the image](/user-guide/software-set-up#setting-up-your-raspberry-pi).
 *   Are you on an older Windows machine? You may need to install a DNS [service](https://learn.adafruit.com/bonjour-zeroconf-networking-for-windows-and-linux/overview#microsoft-windows-914263-8), but also see workarounds [here](https://github.com/OutsourcedGuru/octoprint-name-resolution-hacks).
 
